Added extra files for pspec + templates for the different processes Updated visio files (forgot to split bibtex process and delete some stuff) Added tuclogo.eps for dvi/ps output (can somebody make that thing black?)

--- a/trunk/docs/beleg1/Makefile
+++ b/trunk/docs/beleg1/Makefile
@@ -7,7 +7,12 @@ DEPENDS =	Makefile\
 		planung.tex\
 		operationelle_anforderungen.tex\
 		funktionelle_anforderungen.tex\
-		basismaschine_umgebung.tex
+		basismaschine_umgebung.tex\
+		pspec_bibtex.tex\
+		pspec_kommentarverwaltung.tex\
+		pspec_buchinformation.tex\
+		pspec_mitgliederverwaltung.tex\
+		pspec_buchverwaltung.tex
 
 # Standard pdf
 all: pdf
