- Interfaces und Quellcode zwischenzeitlich bei der Ausgabe entfernt - Testmatrix angefangen - Erste Tests beschrieben und eingetragen

--- a/trunk/docs/beleg3/Makefile
+++ b/trunk/docs/beleg3/Makefile
@@ -1,12 +1,14 @@
 MAIN = teilbeleg3
-DEPENDS =	Makefile\
-		teilbeleg3.tex\
-		meta.tex\
-		titel.tex\
-		anwenderdokumentation.tex\
-		arbeitsaufgaben.tex\
-		programmdokumentation.tex\
-		systemhandbuch.tex
+DEPENDS =	Makefile \
+		teilbeleg3.tex \
+		meta.tex \
+		titel.tex \
+		anwenderdokumentation.tex \
+		arbeitsaufgaben.tex \
+		interfaces_code.tex \
+		programmdokumentation.tex \
+		systemhandbuch.tex \
+		tests.tex
 
 # Standard pdf
 all: pdf
