--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -3,11 +3,15 @@ VERSION=0.1
 DEPEND=*.php include/* include/tests/* design/* 
 DISTDIR=/tmp
 FILES=*.php include design
+DROP=\
+	$(DISTDIR)/$(PACKAGE)-$(VERSION)/test.php\
+	$(DISTDIR)/$(PACKAGE)-$(VERSION)/include/tests
 default:	dist
 dist:		$(DISTDIR)/$(PACKAGE)-$(VERSION).tar.gz
 $(DISTDIR)/$(PACKAGE)-$(VERSION).tar.gz: $(DEPEND) 
 	mkdir -p $(DISTDIR)/$(PACKAGE)-$(VERSION)
 	cp -r $(FILES) $(DISTDIR)/$(PACKAGE)-$(VERSION)
+	rm -rf $(DROP)
 	cd $(DISTDIR) && 	tar zcf $(DISTDIR)/$(PACKAGE)-$(VERSION).tar.gz 	$(PACKAGE)-$(VERSION)
 	cd $(DISTDIR) &&	tar jcf $(DISTDIR)/$(PACKAGE)-$(VERSION).tar.bz2	$(PACKAGE)-$(VERSION)
 	cd $(DISTDIR) && 	zip -r $(DISTDIR)/$(PACKAGE)-$(VERSION).zip 		$(PACKAGE)-$(VERSION)
